10878 - changes from 10878, for z-index issue

--- a/styles/components/table/_tableHeader.scss
+++ b/styles/components/table/_tableHeader.scss
@@ -67,7 +67,7 @@ th.table-header {
     }
 }
 
-.stickyColumn:first-of-type {
+.stickyColumn {
     position: sticky;
     left: 0;
     z-index: 1;
